--- a/gnumed/gnumed/client/locale/README
+++ b/gnumed/gnumed/client/locale/README
@@ -1,5 +1,5 @@
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/client/locale/README,v $
-# $Revision: 1.4 $
+# $Revision: 1.5 $
 
 locale/
 -------
@@ -14,13 +14,18 @@ so that gmI18N can find them regardless.
 create_po_file.sh
 -----------------
 This is a convenience UNIX shell script that takes all
-Python source files below gnumed/client/ and aggregates
-them into one "gnumed.po" file.
+Python source files below the directory given as the
+first command line argument and aggregates
+them into one "*.po" file named after the second argument.
 
-The resulting gnumed.po file needs to be filled in with
+The resulting *.po file needs to be filled in with
 translations and copied to the appropriate language directory
 
  locale/<ISO_lang>/LC_MESSAGES/
 
 where <ISO_lang> stands for ISO code of the country the
 translation is intended for.
+
+To create a *.po file for GNUmed run it like this:
+
+ create_po_file.sh /my/path/to/gnumed/client/ gnumed
