--- a/gnumed/gnumed/test-area/blobs_hilbert/docs/TODO
+++ b/gnumed/gnumed/test-area/blobs_hilbert/docs/TODO
@@ -1,18 +1,14 @@
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/test-area/blobs_hilbert/docs/Attic/TODO,v $
-# $Revision: 1.2 $
+# $Revision: 1.3 $
 -------------------------------------------------
 Erledigte Dinge löschen !
 
 immediately
 ===========
 
-index
------
-- no phrase wheel list if only 1 match
-
 Conf/Doc
 --------
-
+- useable docs
 
 viewer
 ------
@@ -23,18 +19,25 @@ viewer
 import
 ------
  > handle date as date not string
+ > fixup
 
 scan
 ----
- > derzeit Konzentration auf scannen unter Windows
- > vorerst via Twain gui
- > Funktion Seiten umsortieren fertigstellen
- internationalize
+- internationalize
+- save data
+
+[scan]
+doc_id_mode = random|sequential
+seq_file = /usr/mnt/gnumed/archiv/last-doc-id.dat
+
+-> vor abspeichern zum Bestätigen/Ändern anzeigen, wenn sequential mode
+-> vor eigentlichen abspeichern paginiernummer nochmal gegen Verzeichnisse prüfen
+
 
 index
 -----
- Funktion Seiten umsortieren fertigstellen
  internationalize
+ delete page
 
 =====================================================
 post-1.0
@@ -44,6 +47,7 @@ index
 - ugly: use sizers
 - reload phrase wheel after completing a dir
 - quit button
+- Funktion Seiten umsortieren fertigstellen
 
 import
 ------
@@ -65,6 +69,8 @@ scan
  > hack zum Ermitteln der scanner-Parameter 
  > Funktionalität einbauen die unterschiedliche Dokumente mit unterschiedlichen 
  > Scan-Parametern verknüpft
+- Paginiernummer aufdrucken
+- Barcode aufdrucken: Name/dob/Paginiernummer
 
 viewer
 ------
@@ -94,6 +100,8 @@ viewer
  Menü on Right-Click
 
  - progress bar on download/unescape
+
+ - export selektierter dokumente/objekte
 
 Conf/Doc
 --------
