--- a/gnumed/gnumed/client/locale/README
+++ b/gnumed/gnumed/client/locale/README
@@ -1,31 +1,51 @@
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/client/locale/README,v $
-# $Revision: 1.6 $
+# $Revision: 1.7 $
 
-locale/
--------
-All the message catalogs live here.
+NOTE: $LANG corresponds to the ISO code for your language
+NOTE: Requires gettext tools to be installed.
 
-On a POSIX system files from here should be moved into
-/usr/share/locale/... or the corresponding standard place.
+All the message catalog sources live here.
 
-On Windows they must live right here relative to ../wxpython/
-so that gmI18N can find them regardless.
+With
+ <create-gnumed_po.sh $LANG>
+you can rescan the Python source for strings that need
+translation. The result is merged with the file $LANG.po
+which serves as a repository of previously translated
+strings. You can then edit this file adding in more
+translations for message strings. For this you can use
+a simple text editor or any tool you wish as long as you
+keep a copy of your final results in $LANG.po as a
+repository for future translations.
 
-create-gnumed_pot.sh
---------------------
-You guessed it.
+With 
+ <create-gnumed_mo.sh $LANG>
+you can compile a *.mo file from the message catalog source.
+You will end up with a $LANG-gnumed.mo file.
 
-This is a convenience shell script for UNIX that takes all
-Python source files and creates a current gnumed.pot file
-containing all current strings for translation. It then merges
-this new file with a repository files containing the already
-translated strings or it creates such a repository file.
+On a POSIX system this file should be moved into
+ /usr/share/locale/$LANG/LC_MESSAGES/
+or the corresponding standard place. Alternatively you
+can make symlinks from there to
+ /usr/share/gnumed/client/locale/$LANG.mo
 
-The resulting ${LANG}.po file needs to be filled in with
-more translations, compiled into gnumed.mo and moved to the
-appropriate language directory
+On Windows it must live "right here" (relative to
+../wxpython/) so that gmI18N can find $LANG-gnumed.mo
+regardless. In this case you need to create the following
+directories:
 
- locale/<ISO_lang>/LC_MESSAGES/
+client/
+ client/wxpython/
+ client/locale/
+  client/locale/$LANG/
+   client/locale/$LANG/LC_MESSAGES/
 
-where <ISO_lang> stands for the ISO code of the country the
-translation is intended for.
+and then symlink the $LANG-gnumed.mo file into the
+appropriate language directory under the invariant name
+gnumed.mo such that, for example, for German a link
+ locale/de/LC_MESSAGES/gnumed.mo -> locale/de-gnumed.mo
+would exist.
+
+
+Karsten Hilbert
+<Karsten.Hilbert@gmx.net>
+GnuMed i18n/L10n coordinator
